--- a/app/config/sonata/dev/sonata_block.yml
+++ b/app/config/sonata/dev/sonata_block.yml
@@ -1,5 +1,5 @@
 sonata_block:
-    context_manager: sonata.page.block.context_manager
+    #context_manager: sonata.page.block.context_manager
     default_contexts: [cms]
 
     profiler:
@@ -13,8 +13,8 @@ sonata_block:
             contexts:   [admin]
 
         sonata.block.service.text:
-        sonata.page.block.container:
-        sonata.page.block.children_pages:
+#        sonata.page.block.container:
+#        sonata.page.block.children_pages:
         sonata.block.service.rss:
         sonata.media.block.media:
         sonata.media.block.gallery:
