--- a/composer.json
+++ b/composer.json
@@ -100,6 +100,8 @@
 
     "config": {
         "bin-dir": "bin"
+        "process-timeout" : 4000,
+        "github-protocols": ["https", "git"]
     },
 
     "minimum-stability": "dev",
