--- a/app/config/sonata/sonata_admin.yml
+++ b/app/config/sonata/sonata_admin.yml
@@ -8,6 +8,8 @@ sonata_admin:
 
     title:      %sonata_admin.title%
     title_logo: %sonata_admin.logo_title%
+    options:
+        html5_validate: false # does not use html5 validation
     templates:
         # default global templates
         layout:  SonataAdminBundle::standard_layout.html.twig
