--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -24,6 +24,7 @@ imports:
 
 framework:
     trusted_proxies: ['127.0.0.1'] # a list of proxy IPs you trust
+    trusted_hosts: ['.*\.?rmzamora.com$']
     esi: { enabled: true }
     fragments: { path: /_fragment }
     translator: { fallback: en }
@@ -34,7 +35,9 @@ framework:
     validation:      { enable_annotations: true }
     templating:      { engines: ['twig'] }
     default_locale: %locale%
-    session: ~
+    session:
+      name: %session_name%
+      cookie_lifetime: %cookie_lifetime%
 
 # Twig Configuration
 twig:
