--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -5,7 +5,9 @@ imports:
 
 
 framework:
-    router:   { resource: "%kernel.root_dir%/config/routing_dev.yml" }
+    router:
+        resource: "%kernel.root_dir%/config/routing_dev.yml"
+        strict_requirements: true
     profiler: { only_exceptions: false }
 
 web_profiler:
@@ -26,6 +28,16 @@ monolog:
             type: stream
             path: %kernel.logs_dir%/doctrine_%kernel.environment%.log
             channels: doctrine
+
+doctrine:
+    orm:
+        auto_generate_proxy_classes: %kernel.debug%
+        default_entity_manager: default
+
+        entity_managers:
+            default:
+                auto_mapping: true
+                mappings: ~
 
 assetic:
     use_controller: false
