fixed composer and parameters error

--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,7 @@
 
         "dflydev/markdown": "~1.0",
         "willdurand/faker-bundle": "~1.0",
-        "videlalvaro/php-amqplib"  : "dev-master",
+        "videlalvaro/php-amqplib"  : "dev-master"
 
     },
 
