--- a/app/config/parameters.yml.sample
+++ b/app/config/parameters.yml.sample
@@ -12,8 +12,9 @@ parameters:
     mailer_password:    password
 
     locale:             en
-
-    secret:             secret
+    secret:             d4b3a896a53437307b062a8d229e0c97
+    session_name:       rz-platform
+    cookie_lifetime:    3600
 
     # Sonata Admin Options
     sonata_admin.title:             cms-sandbox
